# analytics-env

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  config.yaml  hello.py  pyproject.toml
.github/workflows/: ci.yml
docs/: Coding_FAQ_sup.md  Coding_Interview_Pre_FAQ.md  Interview_Preparation_FAQ.md  analytics_environment.qmd  linear-programming-example.md  linear-regression-derivation.md  ml-evaluation-metrics.md
docs/superpowers/plans/: 2026-03-26-llm-analytics.md  2026-03-26-template-improvements.md
docs/superpowers/specs/: 2026-03-26-llm-analytics-design.md  2026-03-26-template-improvements-design.md
notebooks/: GoogleGenAI.ipynb  _quarto.yml  langextract.ipynb  llm_automated_pipeline.ipynb  llm_code_generation.ipynb  llm_data_qa_rag.ipynb  patent_analysis.ipynb  patent_analysis_chapter.ipynb  pdf2docx.ipynb  test.ipynb
scripts/: config.yaml  customer_journey_plot.py  deploy.ps1  format_sql_in_notebook.py  format_sql_in_notebook_sqlglot.py  format_sql_in_notebook_sqlparse.py  hello.py  pdf_conversion.py
tests/: conftest.py  test_notebooks.py  test_sql.ipynb
