[project]
name = "analytics-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor>=0.8.1",
    "jupysql>=0.10.14",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pre-commit>=4.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "sqlfluff>=3.2.4",
    "sqlglot[rs]>=25.25.1",
    "sqlparse>=0.5.1",
    "thefuzz>=0.22.1",
]

# pyproject.toml

[tool.ruff]
line-length = 88  # Match Black's line length
target-version = "py312"  # Set to your Python version
lint.extend-ignore = [
    "ANN",  # Ignore missing type annotations
    "D",    # Ignore docstring-related warnings
    "E501", # Ignore line length warnings (since Black handles formatting)
    "T201", # Ignore warnings about print statements
    "FBT003", # Ignore boolean positional value in function calls
    "C901", # Ignore complexity warnings
    "PLR0912", # Ignore too many branches
    "PLR0913", # Ignore too many arguments
    "PLR0915", # Ignore too many statements
    "SIM102", # Ignore simplified conditions
    "UP038", # Ignore use of 'X | Y' in isinstance
    "BLE001", # Ignore blind exception catches
    "TRY300", # Ignore 'else' block suggestions
    "RET504", # Ignore unnecessary assignment before return
    "G004",  # Ignore logging format warnings
    "ERA001", # Ignore commented-out code warnings
    "N802",  # Ignore function name case warnings
    "INP001", # Ignore implicit namespace package warnings
]
# You can also specify rules to enforce if needed
# select = ["E", "F", "W", "C", "N", "B"]
