[project]
name = "analytics-env"
version = "0.1.0"
description = "A standardized analytics environment template with pre-configured tooling for data science, LLM integration, and document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "getdaft>=0.3.13",
    "ipywidgets>=8.1.5",
    "jupysql>=0.10.14",
    "kaleido==0.2.1",
    "langextract>=1.0.8",
    "marimo>=0.11.30",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
llm = [
    "aisuite[all]>=0.1.6",
    "crewai>=0.86.0",
    "langchain>=0.3.13",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.7",
    "langchain-google-vertexai>=2.0.9",
    "llama-index>=0.12.1",
    "tavily-python>=0.5.0",
]
pdf = [
    "docling>=2.37.0",
    "pdf2docx>=0.5.8",
    "pdfplumber>=0.11.7",
    "pymupdf4llm>=0.0.17",
    "reportlab>=4.3.1",
]
dev = [
    "astor>=0.8.1",
    "black>=24.10.0",
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
    "pytest>=8.4.2",
    "ruff>=0.8.0",
    "sqlfluff>=3.2.4",
    "sqlglot[rs]>=25.25.1",
    "sqlnbfmt>=0.1.0",
    "sqlparse>=0.5.1",
]
all = [
    "analytics-env[llm]",
    "analytics-env[pdf]",
    "analytics-env[dev]",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.extend-ignore = [
    "ANN",
    "D",
    "E501",
    "T201",
    "FBT003",
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "SIM102",
    "UP038",
    "BLE001",
    "TRY300",
    "RET504",
    "G004",
    "ERA001",
    "N802",
    "INP001",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
